add: axios interceptors

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,6 @@ PORT=3030
 JWT_SECRET=secret
 
 REDIS_URL = redis://localhost:6379
+AUTH_SERVICE_URL = http://localhost:5000/api/v1
+CORE_SERVICE_URL = http://localhost:5001/api/v1
 
