complete: file upload to cloudinary

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ REDIS_URL = redis://localhost:6379
 AUTH_SERVICE_URL = http://localhost:5000/api/v1
 CORE_SERVICE_URL = http://localhost:5001/api/v1
 
+CLOUDINARY_CLOUD_NAME = your-cloudinary-name
+CLOUDINARY_API_KEY = 121213234234234
+CLOUDINARY_API_SECRET = sdf0s9df8u09sdf790sdfu09sdf
+
